syntax = "proto3";

package tpush.srv.push;

service Push {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}

	rpc SendToClient(SendToClientReq) returns (SendToClientRsp) {}
	rpc SendToUser(SendToUserReq) returns (SendToUserRsp) {}
	rpc SendToChannel(SendToChannelReq) returns (SendToChannelRsp) {}
}

message Message {
	string say = 1;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}



message SendToClientReq {
	repeated int64 ids = 1;
	bytes data = 2;
	string datastr = 3;
	int64 id = 4;
	int64 uid = 5;
}

message SendToClientRsp {
}

message SendToUserReq {
	repeated int64 uids = 1;
	bytes data = 2;
	string datastr = 3;
	int64 id = 4;
	int64 uid = 5;
}

message SendToUserRsp {
}

message SendToChannelReq {
	repeated string chans = 1;
	bytes data = 2;
	string datastr = 3;
	int64 id = 4;
	int64 uid = 5;
}

message SendToChannelRsp {
}
